test/grafana/kube/influx.yaml
####################################
#
#     ######                                                                       
#     #     # ###### #####  #       ####  #   # #    # ###### #    # ##### 
#     #     # #      #    # #      #    #  # #  ##  ## #      ##   #   #   
#     #     # #####  #    # #      #    #   #   # ## # #####  # #  #   #   
#     #     # #      #####  #      #    #   #   #    # #      #  # #   #   
#     #     # #      #      #      #    #   #   #    # #      #   ##   #   
#     ######  ###### #      ######  ####    #   #    # ###### #    #   #    
#
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influx
  labels:
    app: influx
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influx
  template:
    metadata:
      labels:
        app: influx
    spec:
      volumes:
      - name: pv
        persistentVolumeClaim:
          claimName: influx
      containers:
      - name: influx
        image: influxdb:1.5
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: pv
          mountPath: /var/lib/influxdb/
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits: 
              memory: "128Mi"
              cpu: "500m"

####################################
#
#     #####                                       
#    #     # ###### #####  #    # #  ####  ###### 
#    #       #      #    # #    # # #    # #      
#     #####  #####  #    # #    # # #      #####  
#          # #      #####  #    # # #      #      
#    #     # #      #   #   #  #  # #    # #      
#     #####  ###### #    #   ##   #  ####  ######
#
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: influx
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: influx
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 8086

####################################
#
#  ######                
#  #     # #    #  ####  
#  #     # #    # #    # 
#  ######  #    # #      
#  #       #    # #      
#  #        #  #  #    # 
#  #         ##    ####  
#
####################################
