test/grafana/kube/telegraf.yaml
####################################
#
#     ######                                                                       
#     #     # ###### #####  #       ####  #   # #    # ###### #    # ##### 
#     #     # #      #    # #      #    #  # #  ##  ## #      ##   #   #   
#     #     # #####  #    # #      #    #   #   # ## # #####  # #  #   #   
#     #     # #      #####  #      #    #   #   #    # #      #  # #   #   
#     #     # #      #      #      #    #   #   #    # #      #   ##   #   
#     ######  ###### #      ######  ####    #   #    # ###### #    #   #    
#
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: telegraf
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      volumes:
      - name: telegraf-volume
        configMap:
          name: telegraf
      containers:
      - name: telegraf
        image: telegraf:1.9
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: telegraf-volume
          mountPath: /etc/telegraf/
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits: 
              memory: "128Mi"
              cpu: "500m"

####################################
#
#   #####                                   #     #                       
#  #     #  ####  #    # ###### #  ####     ##   ##   ##   #####  
#  #       #    # ##   # #      # #    #    # # # #  #  #  #    # 
#  #       #    # # #  # #####  # #         #  #  # #    # #    # 
#  #       #    # #  # # #      # #  ###    #     # ###### #####  
#  #     # #    # #   ## #      # #    #    #     # #    # #      
#   #####   ####  #    # #      #  ####     #     # #    # #      
#
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: telegraf
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
